// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SourceTypeItem /> renders when [disabled=false] 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  disabled={false}
  listItem={false}
>
  <span
    className="text-capitalize"
  >
    genotype
  </span>
  <Icon
    bsStyle="danger"
    faStyle="fas"
    fixedWidth={false}
    name="trash"
    onClick={[Function]}
    pullRight={true}
  />
</ListGroupItem>
`;

exports[`<SourceTypeItem /> renders when [disabled=true] 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  disabled={true}
  listItem={false}
>
  <span
    className="text-capitalize"
  >
    genotype
  </span>
</ListGroupItem>
`;

exports[`<SourceTypes /> renders when global 1`] = `
<Panel>
  <ListGroup
    bsClass="list-group"
  >
    <ListGroupItem
      bsClass="list-group-item"
      listItem={false}
    >
      <strong>
        Default Source Types
      </strong>
    </ListGroupItem>
    <GlobalDescription />
    <ListGroupItem
      bsClass="list-group-item"
      listItem={false}
    >
      <div
        className="clearfix"
      >
        <form
          onSubmit={[Function]}
        >
          <FormGroup
            bsClass="form-group"
          >
            <InputGroup
              bsClass="input-group"
            >
              <FormControl
                bsClass="form-control"
                componentClass="input"
                disabled={false}
                onChange={[Function]}
                type="text"
                value=""
              />
              <InputGroupButton
                bsClass="input-group-btn"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsStyle="primary"
                  disabled={false}
                  type="submit"
                >
                  <Icon
                    faStyle="fas"
                    fixedWidth={false}
                    name="plus-square"
                    pullRight={false}
                    style={
                      Object {
                        "paddingLeft": "3px",
                      }
                    }
                  />
                </Button>
              </InputGroupButton>
            </InputGroup>
            <div
              className="input-form-error-none"
            >
              <span
                className="input-error-message"
              >
                None
              </span>
            </div>
          </FormGroup>
        </form>
        <ListGroup
          bsClass="list-group"
        >
          <SourceTypeItem
            disabled={false}
            key="isolate"
            onRemove={[Function]}
            sourceType="isolate"
          />
          <SourceTypeItem
            disabled={false}
            key="serotype"
            onRemove={[Function]}
            sourceType="serotype"
          />
        </ListGroup>
      </div>
    </ListGroupItem>
  </ListGroup>
</Panel>
`;

exports[`<SourceTypes /> renders when not global and not remote 1`] = `
<Panel>
  <ListGroup
    bsClass="list-group"
  >
    <ListGroupItem
      bsClass="list-group-item"
      listItem={false}
    >
      <strong>
         Source Types
      </strong>
      <Checkbox
        checked={true}
        label="Enable"
        onClick={[Function]}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
    <LocalDescription />
    <ListGroupItem
      bsClass="list-group-item"
      listItem={false}
    >
      <div
        className="clearfix"
      >
        <form
          onSubmit={[Function]}
        >
          <FormGroup
            bsClass="form-group"
          >
            <InputGroup
              bsClass="input-group"
            >
              <FormControl
                bsClass="form-control"
                componentClass="input"
                disabled={false}
                onChange={[Function]}
                type="text"
                value=""
              />
              <InputGroupButton
                bsClass="input-group-btn"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsStyle="primary"
                  disabled={false}
                  type="submit"
                >
                  <Icon
                    faStyle="fas"
                    fixedWidth={false}
                    name="plus-square"
                    pullRight={false}
                    style={
                      Object {
                        "paddingLeft": "3px",
                      }
                    }
                  />
                </Button>
              </InputGroupButton>
            </InputGroup>
            <div
              className="input-form-error-none"
            >
              <span
                className="input-error-message"
              >
                None
              </span>
            </div>
          </FormGroup>
        </form>
        <ListGroup
          bsClass="list-group"
        >
          <SourceTypeItem
            disabled={false}
            key="isolate"
            onRemove={[Function]}
            sourceType="isolate"
          />
          <SourceTypeItem
            disabled={false}
            key="serotype"
            onRemove={[Function]}
            sourceType="serotype"
          />
        </ListGroup>
      </div>
    </ListGroupItem>
  </ListGroup>
</Panel>
`;

exports[`<SourceTypes /> renders when not global and remote 1`] = `
<Panel>
  <ListGroup
    bsClass="list-group"
  >
    <ListGroupItem
      bsClass="list-group-item"
      listItem={false}
    >
      <strong>
         Source Types
      </strong>
    </ListGroupItem>
    <LocalDescription />
    <ListGroupItem
      bsClass="list-group-item"
      listItem={false}
    >
      <div
        className="clearfix"
      >
        <form
          onSubmit={[Function]}
        >
          <FormGroup
            bsClass="form-group"
          >
            <InputGroup
              bsClass="input-group"
            >
              <FormControl
                bsClass="form-control"
                componentClass="input"
                disabled={true}
                onChange={[Function]}
                type="text"
                value=""
              />
              <InputGroupButton
                bsClass="input-group-btn"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsStyle="primary"
                  disabled={true}
                  type="submit"
                >
                  <Icon
                    faStyle="fas"
                    fixedWidth={false}
                    name="plus-square"
                    pullRight={false}
                    style={
                      Object {
                        "paddingLeft": "3px",
                      }
                    }
                  />
                </Button>
              </InputGroupButton>
            </InputGroup>
            <div
              className="input-form-error-none"
            >
              <span
                className="input-error-message"
              >
                None
              </span>
            </div>
          </FormGroup>
        </form>
        <ListGroup
          bsClass="list-group"
        >
          <SourceTypeItem
            disabled={true}
            key="isolate"
            onRemove={[Function]}
            sourceType="isolate"
          />
          <SourceTypeItem
            disabled={true}
            key="serotype"
            onRemove={[Function]}
            sourceType="serotype"
          />
        </ListGroup>
      </div>
    </ListGroupItem>
  </ListGroup>
</Panel>
`;
